--- a/portfolio/styles/Home.module.css
+++ b/portfolio/styles/Home.module.css
@@ -1,20 +1,19 @@
-.container {
-  padding: 0 2rem;
-}
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+}
+
+.image{
+  display: flex;
+  width: 100%;
 }
 
 .header{
   width: 100%;
-  background-color: #020145;
+  height: 113px;
+  background-color: #020415;
 }
 
 .footer {
@@ -34,7 +33,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #6d6bdd;
   text-decoration: none;
 }
 
@@ -46,8 +45,9 @@
 
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  line-height: 2.60;
+  font-size: 40px;
+  color: #fafafa;
 }
 
 .title,
