--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -2,9 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: montserreat;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
 a {
   color: inherit;
   text-decoration: none;
