--- a/portfolio/styles/Home.module.css
+++ b/portfolio/styles/Home.module.css
@@ -1,19 +1,17 @@
-
 .main {
   flex: 1;
   display: flex;
   flex-direction: column;
-}
-
-.image{
-  display: flex;
-  width: 100%;
+  align-items: center;
 }
 
 .header{
   width: 100%;
-  height: 113px;
-  background-color: #020415;
+  height: 10%;
+  background-color: rgb(2, 4, 21, 81%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .footer {
@@ -32,11 +30,6 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #6d6bdd;
-  text-decoration: none;
-}
-
 .title a:hover,
 .title a:focus,
 .title a:active {
@@ -44,10 +37,17 @@
 }
 
 .title {
+  text-align: inherit;
   margin: 0;
-  line-height: 2.60;
-  font-size: 40px;
+  padding-left: 3%;
+  line-height: 2;
+  font-size: 2rem;
   color: #fafafa;
+}
+
+.git{
+  padding: inherit;
+  padding-left: 30%;
 }
 
 .title,
@@ -56,9 +56,12 @@
 }
 
 .description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+  text-align: inherit;
+  margin: 0;
+  padding-left: 10%;
+  line-height: 2;
+  font-size: 2rem;
+  color: #fafafa;
 }
 
 .code {
