--- a/portfolio/styles/Home.module.css
+++ b/portfolio/styles/Home.module.css
@@ -33,6 +33,7 @@
   padding-bottom: 13%;
   display: flex;
   flex-direction: row;
+  height: 40rem;
 }
 
 .txt{
@@ -48,7 +49,8 @@
 .footer {
   display: flex;
   flex-direction: column;
-  padding: 2rem 0;
+  height: 12rem;
+  /* padding: 2rem 0; */
   justify-content: center;
   align-items: center;
   background-color: rgba(149, 158, 237, 0.52);
