--- a/portfolio/styles/Home.module.css
+++ b/portfolio/styles/Home.module.css
@@ -49,13 +49,6 @@
   height: 42rem;
 }
 
-.PrTitle{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 2rem;
-}
-
 .txt{
   padding-left: 6%;
   padding-top: 10%;
@@ -69,7 +62,33 @@
   padding-left: 30%;
 }
 
+.PrTitle{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem;
+}
 
+.objs{
+  display: flex;
+  flex-direction: row;
+  padding-left: 6%;
+}
+
+.circles{
+  height: 400px;
+  width: 400px;
+  background-color: #9D9D9D;
+  border-radius: 50%;
+  margin-top: 20px;
+  margin-left: 120px;
+  padding-top: 50px;
+  text-align: center;
+}
+
+.text{
+  margin-top: 180px;
+}
 .footer {
   display: flex;
   flex-direction: column;
