--- a/portfolio/styles/Home.module.css
+++ b/portfolio/styles/Home.module.css
@@ -1,12 +1,18 @@
+.doc{
+  width: auto;
+}
+
 .main {
   display: flex;
   flex-direction: column;
   background-color: rgba(16, 18, 36, 1);
   color: #fafafa;
+  margin: 0px;
+  padding: 0px;
 }
 
 .header{
-  width: auto;
+  width: 100%;
   height: 7rem;
   background-color: rgba(2, 4, 21, 0.81);
   display: flex;
@@ -47,6 +53,7 @@
   flex-direction: column;
   flex-flow: column wrap;
   height: 42rem;
+  align-items: center;
 }
 
 .txt{
@@ -65,14 +72,13 @@
 .PrTitle{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   font-size: 2rem;
 }
 
 .objs{
   display: flex;
   flex-direction: row;
-  padding-left: 6%;
 }
 
 .circles{
@@ -81,9 +87,26 @@
   background-color: #9D9D9D;
   border-radius: 50%;
   margin-top: 20px;
-  margin-left: 120px;
+  /* margin-left: 120px; */
   padding-top: 50px;
   text-align: center;
+}
+
+.circlesMain{
+  height: 400px;
+  width: 400px;
+  background-color: #9D9D9D;
+  border-radius: 50%;
+  margin-top: 20px;
+  margin-left: 120px;
+  margin-right: 120px;
+  padding-top: 50px;
+  text-align: center;
+}
+
+.circleImgs{
+  width: 200px;
+  height: 200px;
 }
 
 .text{
@@ -123,9 +146,17 @@
   }
 
   .circles{
-    margin-left: 60px;
     height: 300px;
     width: 300px;
+  }
+
+  .circlesMain{
+    height: 300px;
+    width: 300px;
+  }
+
+  .text{
+    margin-top: 100px;
   }
 }
 
@@ -155,6 +186,20 @@
 
   .txt{
     width: 600px;
+  }
+
+  .circles{
+    height: 200px;
+    width: 200px;
+  }
+
+  .circlesMain{
+    height: 200px;
+    width: 200px;
+  }
+
+  .text{
+    margin-top: 100px;
   }
 }
 
