--- a/portfolio/styles/Home.module.css
+++ b/portfolio/styles/Home.module.css
@@ -258,3 +258,21 @@
   }
 
 }
+
+@media (max-width: 440px){
+  .title{
+    left: 20px;
+  }
+  .body{
+    height: 35rem;
+  }
+  .txt{
+    width: 300px;
+    height: 150px;
+    font-size: 0.6rem;
+  }
+
+  .img{
+    width: 250px;
+  }
+}
